# yoav_roy_ass3_repo

./: CMakeLists.txt  README.md  classifiedVector.cpp  classifiedVector.h  client.cpp  client.h  disVector.cpp  disVector.h  distanceAlgo.cpp  distanceAlgo.h  distances.cpp  distances.h  main.cpp  makefile  server.cpp  validations.cpp  validations.h  vecComparator.cpp  vecComparator.h  vectorData.cpp  vectorData.h  vectorsDataStruct.cpp  vectorsDataStruct.h
